// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site: List Basic Usage 1`] = `
Object {
  "docs": "Render an unstyled list by default.",
  "html": "<ol class=\\"drac-list\\">
  <li class=\\"drac-text drac-text-white\\">Blade</li>
  <li class=\\"drac-text drac-text-white\\">Buffy</li>
  <li class=\\"drac-text drac-text-white\\">Morbius</li>
</ol>
",
  "react": "<List>
  <li className=\\"drac-text drac-text-white\\">Blade</li>
  <li className=\\"drac-text drac-text-white\\">Buffy</li>
  <li className=\\"drac-text drac-text-white\\">Morbius</li>
</List>;
",
  "title": "Usage",
}
`;

exports[`Site: List Colors 1`] = `
Object {
  "docs": "Lists can be customized to use any of the Dracula UI theme colors.",
  "html": "<ol
  variant=\\"ordered\\"
  color=\\"cyan\\"
  class=\\"drac-list drac-list-ordered drac-list-cyan\\"
>
  <li class=\\"drac-text drac-text-white\\">Blade</li>
  <li class=\\"drac-text drac-text-white\\">Buffy</li>
  <li class=\\"drac-text drac-text-white\\">Morbius</li>
</ol>
",
  "react": "<List variant=\\"ordered\\" color=\\"cyan\\">
  <li className=\\"drac-text drac-text-white\\">Blade</li>
  <li className=\\"drac-text drac-text-white\\">Buffy</li>
  <li className=\\"drac-text drac-text-white\\">Morbius</li>
</List>;
",
  "title": "Colors",
}
`;

exports[`Site: List Variants 1`] = `
Object {
  "docs": "Lists can be displayed in dashes as an \`<ul>\` or in numbers as an \`<ol>",
  "html": "<div class=\\"drac-box\\">
  <ol
    variant=\\"ordered\\"
    color=\\"purple\\"
    class=\\"drac-list drac-list-ordered drac-list-purple\\"
  >
    <li class=\\"drac-text drac-text-white\\">Blade</li>
    <li class=\\"drac-text drac-text-white\\">Buffy</li>
    <li class=\\"drac-text drac-text-white\\">Morbius</li>
  </ol>
  <ul
    variant=\\"unordered\\"
    color=\\"purple\\"
    class=\\"drac-list drac-list-unordered drac-list-purple\\"
  >
    <li class=\\"drac-text drac-text-white\\">Blade</li>
    <li class=\\"drac-text drac-text-white\\">Buffy</li>
    <li class=\\"drac-text drac-text-white\\">Morbius</li>
  </ul>
</div>
",
  "react": "<Box>
  <List variant=\\"ordered\\" color=\\"purple\\">
    <li className=\\"drac-text drac-text-white\\">Blade</li>
    <li className=\\"drac-text drac-text-white\\">Buffy</li>
    <li className=\\"drac-text drac-text-white\\">Morbius</li>
  </List>
  <List variant=\\"unordered\\" color=\\"purple\\">
    <li className=\\"drac-text drac-text-white\\">Blade</li>
    <li className=\\"drac-text drac-text-white\\">Buffy</li>
    <li className=\\"drac-text drac-text-white\\">Morbius</li>
  </List>
</Box>;
",
  "title": "Variants",
}
`;
